# agentic-workflows

./: .gitattributes  .gitignore  .markdownlint.jsonc  404.html  AGENTS.md  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.agent/: README.md  backlog.yaml  coverage-matrix.yaml  current-plan.md  decisions.md  glossary.md  iteration-log.md  mission.md  ontology-status.yaml  repo-map.md
.agent/decisions/: D-0001-keep-the-ontology-pattern-first.md  D-0002-enforce-strict-phase-ordering.md  D-0003-commit-execution-memory-as-durable-repository-state.md  D-0004-start-coverage-tracking-before-content-authoring.md  D-0005-establish-a-glossary-during-bootstrap.md  D-0006-shard-iteration-history-into-dated-files.md  D-0007-standardize-controlled-vocabulary-file-shape.md  D-0008-standardize-helper-scripting-on-python-via-uv.md  D-0009-keep-browse-views-derived-and-reference-oriented.md  D-0010-map-transform-process-to-structured-representation-transformation.md  D-0011-publish-through-a-derived-mkdocs-site.md  D-0012-deploy-the-derived-site-with-github-pages-actions.md  D-0013-keep-current-plan-as-a-rolling-control-document.md  (+3 more)
browse/: index.html
docs/: contribution-guide.md  index-tree.md  ontology.md  schema.md
instances/: index.html
ontology/: index.html
pattern-families/: index.html
patterns/: index.html
schema/: index.html  pattern.schema.json
scripts/: run-agentic-workflows-forever.sh  run-agentic-workflows-loop.sh  run-mermaid-illustration-forever.sh  run-mermaid-illustration-loop.sh
search/: search_index.json
vocabularies/: index.html
(+1416 files in other folders)
