[project]
name = "agentic-workflows-tools"
version = "0.1.0"
description = "Helper tooling for the agentic-workflows repository"
requires-python = ">=3.14,<3.15"
dependencies = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.6.0,<10",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "PyYAML>=6.0.2,<7",
]

[tool.uv]
package = false
